--- a/html/payment-ar.html
+++ b/html/payment-ar.html
@@ -115,6 +115,36 @@
             <input id="securitycode" type="text" pattern="[0-9]*" inputmode="numeric">
         </div>
     </div>
+    <section>
+        <button class="show-modal">طلب المنتج</button>
+        <span class="overlay"></span>
+  
+        <div class="modal-box">
+          <i class="fa-regular fa-circle-check"></i>
+          <h2>مكتمل</h2>
+          <h3>تم طلب المنتج بنجاح</h3>
+  
+          <div class="buttons">
+            <button class="close-btn">تمام, قفل</button>
+          </div>
+        </div>
+      </section>
+      <script>
+        const section = document.querySelector("section"),
+          overlay = document.querySelector(".overlay"),
+          showBtn = document.querySelector(".show-modal"),
+          closeBtn = document.querySelector(".close-btn");
+  
+        showBtn.addEventListener("click", () => section.classList.add("active"));
+  
+        overlay.addEventListener("click", () =>
+          section.classList.remove("active")
+        );
+  
+        closeBtn.addEventListener("click", () =>
+          section.classList.remove("active")
+        );
+      </script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/imask/3.4.0/imask.min.js'></script><script  src="/js/payment.js"></script>
 </body>
 </html>
